--- a/cf-dashboard/build.xml
+++ b/cf-dashboard/build.xml
@@ -1,8 +1,7 @@
-<project name="generic" default="delete" basedir=".">
+<project name="generic" default="compile" basedir=".">
 
 <property name="sourceDirs" value="${core.src}"/>
-<property name="workDir" value="${core.working}"/>
-<property name="buildDir" value="${workDir}/build/"/>
+<property name="buildDir" value="${core.workdir}/build/"/>
 <property name="docDir" value="${core.docDir}"/>
 <property environment="env"/>
 
@@ -15,17 +14,16 @@
 		<echo message="Checking out code from the Cougaar branch ${core.cvsTag}"/>
 	</target>
                
-	<target name="delete">
-      <delete dir="${workDir}"/>
-			<mkdir dir="${core.reports}"/>
-  </target>
-
     <target name="checkout">
+			<echo message="here ${core.repository}"/>
+			<echo message="here ${core.module}"/>
+			<echo message="here ${core.cvsTag}"/>
+			<echo message="here ${core.workdir}"/>
 			<cvs command=" -Q co "
-				cvsRoot="${core.repository}"
+				cvsRoot="${core.cvsroot}${core.repository}"
 				package="${core.module}"
 				tag="${core.cvsTag}"
-				dest="${workDir}"/>
+				dest="${core.workdir}"/>
     </target>
 
     <target name="compile">
@@ -38,36 +36,12 @@
 				<antcall target="nightly"/>
 	</target>
 
-	<target name="nightly" unless="core.noNightly">
-				<echo message="Building against B10_4"/>
-				<mkdir dir="${workDir}/foo"/>
-        <javac  debug="false" 
-                failonerror="false" 
-                optimize="false" 
-                srcdir="${sourceDirs}" 
-								excludes="**/*JabberLogger.java" 
-                destdir="${workDir}/foo">
-                <classpath refid="B10_4.cougaar.libs"/>
-        </javac>
-				<delete dir="${workDir}/foo"/>
-	</target>
-
-	<target name="jar" depends="compile">
-		<jar jarfile="${core.jarFile}" baseDir="${buildDir}"/>
-		<signjar jar="${core.jarFile}" keystore="/var/build/signingCA_keystore" alias="privileged" storepass="keystore"/>
-	</target>
-
 	<target name="test" if="core.hasTests">
 		<junit printsummary="yes" haltonfailure="no">
 			<classpath>
 				<pathelement location="${buildDir}"/>
 				<pathelement path="${env.CLASSPATH}"/>
         <path refid="cougaar.libs"/>
-				<!--
-				<fileset dir="${workDir}\${core.module}\">
-					<include name="**/*.jar" />
-				</fileset>
-				-->
 			</classpath>
 			<formatter type="xml" />
 			<batchtest fork="no" todir="${buildDir}">
@@ -122,13 +96,6 @@
 		<javadoc sourcepath="${sourceDirs}" classpathref="cougaar.libs" destdir="${docDir}" windowtitle="Javadoc" packagenames="com.*,org.*,edu.*,acme.*,tv.*,safe.*,jabberlib.*,cougaarinstaller.*"/>
 	</target>
 	
-	<target name="srczip" if="core.usesSrcZip">
-		<delete file="${core.srcZip}"/>
-		<zip destfile="${core.srcZip}" basedir="${core.srcDirForZipFile}" includes="**/*.java"/>
-	</target>
-
-	<target name="clean" depends="timestamp,delete,checkout,defrunner,jspc,antlr,jar,pmd,cpd,srczip,doc,test"/>
-    
 </project>
 
 
