*** empty log message ***

--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -1,7 +1,7 @@
 User webuser
 Group webgroup
 
-ServerName cougaarforge
+ServerName cougaar.org
 ServerAdmin tom@infoether.com
 Port 80
 
@@ -27,7 +27,12 @@ ErrorLog /usr/local/var/httpd/log/error_log
 AddType application/x-httpd-php .php .phtml .php3
 AddType application/x-httpd-php-source .phps
 
+AddHandler cgi-script .cgi
+Options ExecCGI FollowSymLinks
+
 DocumentRoot "/var/www/gforge-3.0/www"
+
+MaxClients 50
 
 ScriptAlias /cgi-bin/ "/usr/local/share/httpd/cgi-bin/"
 <Directory "/usr/local/share/httpd/cgi-bin">
@@ -36,6 +41,9 @@ ScriptAlias /cgi-bin/ "/usr/local/share/httpd/cgi-bin/"
 	Order allow,deny
 	Allow from all
 </Directory>
+
+Alias /wiki/ "/usr/share/moin/htdocs/" 
+ScriptAlias /cougaarwiki "/usr/share/moin/cougaarwiki/moin.cgi"
 
 ScriptAlias /mailman/ "/usr/local/mailman/cgi-bin/"
 <Directory "/usr/local/mailman/cgi-bin/">
@@ -67,56 +75,223 @@ DirectoryIndex index.html index.shtml index.cgi index.php
 NameVirtualHost *
 
 <VirtualHost *>
+ ServerName cougaar.org
+ DocumentRoot /var/www/gforge-3.0/www
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName www.cougaar.org
+ DocumentRoot /var/www/www_cougaar_org/
+</VirtualHost>
+
+<VirtualHost *>
  ServerName cougaarforge.cougaar.org
  DocumentRoot /var/www/gforge-3.0/www
 </VirtualHost>
 
 <VirtualHost *>
- ServerName tutorials.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/tutorials
+ ServerName bugs.cougaar.org
+ DocumentRoot /var/www/bugzilla/
+ CustomLog /usr/local/var/httpd/log/bugs.cougaar.org-access_log common
+ ErrorLog /usr/local/var/httpd/log/bugs.cougaar.org-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName docs.cougaar.org
+ DocumentRoot /var/www/gforge-3.0/www/docshostredirect/
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName doc.cougaar.org
+ DocumentRoot /var/www/gforge-3.0/www/docshostredirect/
+</VirtualHost>
+
+##############################################
+# CougaarForge Projects
+#
+<VirtualHost *>
+ ServerName tutorials.cougaar.org
+ DocumentRoot /var/www/gforge-projects/tutorials
  CustomLog /usr/local/var/httpd/log/tutorials-access_log common
  ErrorLog /usr/local/var/httpd/log/tutorials-error_log
 </VirtualHost>
 
 <VirtualHost *>
- ServerName micro.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/micro
+ ServerName micro.cougaar.org
+ DocumentRoot /var/www/gforge-projects/micro
  CustomLog /usr/local/var/httpd/log/micro-access_log common
  ErrorLog /usr/local/var/httpd/log/micro-error_log
 </VirtualHost>
 
 <VirtualHost *>
- ServerName coabs.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/coabs
- CustomLog /usr/local/var/httpd/log/coabs-access_log common
- ErrorLog /usr/local/var/httpd/log/coabs-error_log
-</VirtualHost>
-
-<VirtualHost *>
- ServerName cougaarunit.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/cougaarunit
+ ServerName cougaarunit.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cougaarunit
  CustomLog /usr/local/var/httpd/log/cougaarunit-access_log common
  ErrorLog /usr/local/var/httpd/log/cougaarunit-error_log
 </VirtualHost>
 
 <VirtualHost *>
- ServerName cui.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/cui
+ ServerName cui.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cui
  CustomLog /usr/local/var/httpd/log/cui-access_log common
  ErrorLog /usr/local/var/httpd/log/cui-error_log
 </VirtualHost>
 
 <VirtualHost *>
- ServerName support.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/support
+ ServerName support.cougaar.org
+ DocumentRoot /var/www/gforge-projects/support
  CustomLog /usr/local/var/httpd/log/support-access_log common
  ErrorLog /usr/local/var/httpd/log/support-error_log
 </VirtualHost>
 
 <VirtualHost *>
- ServerName csmart.cougaarforge.cougaar.org
- DocumentRoot /var/www/gforge-3.0/csmart
+ ServerName csmart.cougaar.org
+ DocumentRoot /var/www/gforge-projects/csmart
  CustomLog /usr/local/var/httpd/log/csmart-access_log common
  ErrorLog /usr/local/var/httpd/log/csmart-error_log
 </VirtualHost>
+
+<VirtualHost *>
+ ServerName cougaarlegacy.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cougaarlegacy
+ CustomLog /usr/local/var/httpd/log/cougaarlegacy-access_log common
+ ErrorLog /usr/local/var/httpd/log/cougaarlegacy-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName cougaar.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cougaar
+ CustomLog /usr/local/var/httpd/log/cougaar-access_log common
+ ErrorLog /usr/local/var/httpd/log/cougaar-error_log	
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName bol2.cougaar.org
+ DocumentRoot /var/www/gforge-projects/bol2
+ CustomLog /usr/local/var/httpd/log/bol2-access_log common
+ ErrorLog /usr/local/var/httpd/log/bol2-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName cougaaride.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cougaaride
+ CustomLog /usr/local/var/httpd/log/cougaaride-access_log common
+ ErrorLog /usr/local/var/httpd/log/cougaaride-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName vishnu.cougaar.org
+ DocumentRoot /var/www/gforge-projects/vishnu
+ CustomLog /usr/local/var/httpd/log/vishnu-access_log common
+ ErrorLog /usr/local/var/httpd/log/vishnu-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName glm.cougaar.org
+ DocumentRoot /var/www/gforge-projects/glm
+ CustomLog /usr/local/var/httpd/log/glm-access_log common
+ ErrorLog /usr/local/var/httpd/log/glm-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName qos.cougaar.org
+ DocumentRoot /var/www/gforge-projects/qos
+ CustomLog /usr/local/var/httpd/log/qos-access_log common
+ ErrorLog /usr/local/var/httpd/log/qos-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName core.cougaar.org
+ DocumentRoot /var/www/gforge-projects/core
+ CustomLog /usr/local/var/httpd/log/core-access_log common
+ ErrorLog /usr/local/var/httpd/log/core-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName webserver.cougaar.org
+ DocumentRoot /var/www/gforge-projects/webserver
+ CustomLog /usr/local/var/httpd/log/webserver-access_log common
+ ErrorLog /usr/local/var/httpd/log/webserver-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName aggagent.cougaar.org
+ DocumentRoot /var/www/gforge-projects/aggagent
+ CustomLog /usr/local/var/httpd/log/aggagent-access_log common
+ ErrorLog /usr/local/var/httpd/log/aggagent-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName build.cougaar.org
+ DocumentRoot /var/www/gforge-projects/build
+ CustomLog /usr/local/var/httpd/log/build-access_log common
+ ErrorLog /usr/local/var/httpd/log/build-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName community.cougaar.org
+ DocumentRoot /var/www/gforge-projects/community
+ CustomLog /usr/local/var/httpd/log/community-access_log common
+ ErrorLog /usr/local/var/httpd/log/community-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName planning.cougaar.org
+ DocumentRoot /var/www/gforge-projects/planning
+ CustomLog /usr/local/var/httpd/log/planning-access_log common
+ ErrorLog /usr/local/var/httpd/log/planning-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName util.cougaar.org
+ DocumentRoot /var/www/gforge-projects/util
+ CustomLog /usr/local/var/httpd/log/util-access_log common
+ ErrorLog /usr/local/var/httpd/log/util-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName cf-ruby-cvs-exp.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cf-ruby-cvs-exp
+ CustomLog /usr/local/var/httpd/log/cf-ruby-cvs-exp-access_log common
+ ErrorLog /usr/local/var/httpd/log/cf-ruby-cvs-exp-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName servicediscovery.cougaar.org
+ DocumentRoot /var/www/gforge-projects/servicediscovery
+ CustomLog /usr/local/var/httpd/log/servicediscovery-access_log common
+ ErrorLog /usr/local/var/httpd/log/servicediscovery-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName yp.cougaar.org
+ DocumentRoot /var/www/gforge-projects/yp
+ CustomLog /usr/local/var/httpd/log/yp-access_log common
+ ErrorLog /usr/local/var/httpd/log/yp-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName delta-blackjack.cougaar.org
+ DocumentRoot /var/www/gforge-projects/delta-blackjack
+ CustomLog /usr/local/var/httpd/log/delta-blackjack-access_log common
+ ErrorLog /usr/local/var/httpd/log/delta-blackjack-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName cougaar-pmd.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cougaar-pmd
+ CustomLog /usr/local/var/httpd/log/cougaar-pmd-access_log common
+ ErrorLog /usr/local/var/httpd/log/cougaar-pmd-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName profiler.cougaar.org
+ DocumentRoot /var/www/gforge-projects/profiler
+ CustomLog /usr/local/var/httpd/log/profiler-access_log common
+ ErrorLog /usr/local/var/httpd/log/profiler-error_log
+</VirtualHost>
+
+#
+# CougaarForge Projects
+##############################################
 
