Changed report type

--- a/cf-dashboard/build.xml
+++ b/cf-dashboard/build.xml
@@ -61,7 +61,7 @@
 		<delete file="${core.pmd.report}"/>
 		<taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask"/>
 			<pmd rulesetfiles="rulesets/unusedcode.xml" shortFilenames="true">
-				<formatter toFile="${core.pmd.report}" type="html"/>
+				<formatter toFile="${core.pmd.report}" type="summaryhtml"/>
 				<fileset dir="${core.workdir}/${core.module}/${core.srcdir}">
 					<include name="**/*.java"/>
 				</fileset>
