--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -13,6 +13,8 @@ LoadModule access_module      libexec/mod_access.so
 LoadModule alias_module       libexec/mod_alias.so
 LoadModule cgi_module         libexec/mod_cgi.so
 LoadModule php4_module        libexec/libphp4.so
+LoadModule auth_module        libexec/mod_auth.so
+LoadModule env_module        libexec/mod_env.so
 
 TypesConfig /etc/mime.types
 DefaultType text/plain
@@ -34,14 +36,6 @@ DocumentRoot "/var/www/gforge-3.0/www"
 
 MaxClients 50
 
-ScriptAlias /cgi-bin/ "/usr/local/share/httpd/cgi-bin/"
-<Directory "/usr/local/share/httpd/cgi-bin">
-	AllowOverride None
-	Options None
-	Order allow,deny
-	Allow from all
-</Directory>
-
 Alias /wiki/ "/usr/share/moin/htdocs/" 
 ScriptAlias /cougaarwiki "/usr/share/moin/cougaarwiki/moin.cgi"
 
@@ -54,6 +48,12 @@ ScriptAlias /mailman/ "/usr/local/mailman/cgi-bin/"
 </Directory>
 
 Alias /pipermail/ "/usr/local/mailman/archives/public/"
+<Directory "/usr/local/mailman/archives/public/">
+	Options Indexes FollowSymLinks 
+	AllowOverride All
+	Order allow,deny
+	Allow from all
+</Directory>
 
 <Directory "/var/www/gforge-3.0/www">
 	Options Indexes FollowSymLinks ExecCGI
@@ -74,9 +74,24 @@ DirectoryIndex index.html index.shtml index.cgi index.php
 
 NameVirtualHost *
 
+ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
+<Directory "/usr/local/viewcvs/cgi">
+  AllowOverride None
+  Options None
+  Order allow,deny
+  Allow from all
+</Directory>
+
 <VirtualHost *>
- ServerName cougaar.org
- DocumentRoot /var/www/gforge-3.0/www
+	ServerName cougaar.org
+	DocumentRoot /var/www/gforge-3.0/www
+	SetEnv sys_gfdbhost localhost
+	SetEnv sys_gfdbname gforge
+	SetEnv sys_gfdbuser postgres
+	SetEnv sys_gfdbpasswd fidd1e
+	Redirect /license.html http://cougaar.org/docman/view.php/17/58/license.html
+	Redirect /faq.html http://cougaar.org/docman/view.php/17/55/FAQ.html
+	Redirect /wiki/ http://cougaar.org/cougaarwiki/
 </VirtualHost>
 
 <VirtualHost *>
@@ -98,12 +113,12 @@ NameVirtualHost *
 
 <VirtualHost *>
  ServerName docs.cougaar.org
- DocumentRoot /var/www/gforge-3.0/www/docshostredirect/
+ DocumentRoot /var/www/doc_cougaar_org/
 </VirtualHost>
 
 <VirtualHost *>
  ServerName doc.cougaar.org
- DocumentRoot /var/www/gforge-3.0/www/docshostredirect/
+ DocumentRoot /var/www/doc_cougaar_org/
 </VirtualHost>
 
 ##############################################
@@ -142,6 +157,8 @@ NameVirtualHost *
  DocumentRoot /var/www/gforge-projects/support
  CustomLog /usr/local/var/httpd/log/support-access_log common
  ErrorLog /usr/local/var/httpd/log/support-error_log
+ Options Indexes
+ IndexOptions FancyIndexing
 </VirtualHost>
 
 <VirtualHost *>
@@ -290,6 +307,30 @@ NameVirtualHost *
  CustomLog /usr/local/var/httpd/log/profiler-access_log common
  ErrorLog /usr/local/var/httpd/log/profiler-error_log
 </VirtualHost>
+
+<VirtualHost *>
+ ServerName mts.cougaar.org
+ DocumentRoot /var/www/gforge-projects/mts
+ CustomLog /usr/local/var/httpd/log/mts-access_log common
+ ErrorLog /usr/local/var/httpd/log/mts-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName message-router.cougaar.org
+ DocumentRoot /var/www/gforge-projects/message-router
+ CustomLog /usr/local/var/httpd/log/message-router-access_log common
+ ErrorLog /usr/local/var/httpd/log/message-router-error_log
+</VirtualHost>
+
+<VirtualHost *>
+ ServerName ccm.cougaar.org
+ DocumentRoot /var/www/gforge-projects/ccm
+ CustomLog /usr/local/var/httpd/log/ccm-access_log common
+ ErrorLog /usr/local/var/httpd/log/ccm-error_log
+</VirtualHost>
+
+#PLACEHOLDER#
+
 
 #
 # CougaarForge Projects
