--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -37,6 +37,7 @@ DocumentRoot "/var/www/gforge-3.0/www"
 MaxClients 50
 
 Alias /wiki/ "/usr/share/moin/htdocs/" 
+Alias /cougaarwiki/img/ "/usr/share/moin/htdocs/img/" 
 ScriptAlias /cougaarwiki "/usr/share/moin/cougaarwiki/moin.cgi"
 
 ScriptAlias /mailman/ "/usr/local/mailman/cgi-bin/"
@@ -76,7 +77,7 @@ NameVirtualHost *
 
 ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 <Directory "/usr/local/viewcvs/cgi">
-  AllowOverride None
+  AllowOverride All
   Options None
   Order allow,deny
   Allow from all
@@ -180,6 +181,9 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cougaar
  CustomLog /usr/local/var/httpd/log/cougaar-access_log common
  ErrorLog /usr/local/var/httpd/log/cougaar-error_log	
+	<Directory "/var/www/gforge-projects/cougaar/">
+	  Options Indexes
+	</Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -329,7 +333,15 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /usr/local/var/httpd/log/ccm-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName acme.cougaar.org
+ DocumentRoot /var/www/gforge-projects/acme
+ CustomLog /usr/local/var/httpd/log/acme-access_log common
+ ErrorLog /usr/local/var/httpd/log/acme-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
 
 
 #
