--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -80,7 +80,9 @@ cvs_roots =
 	cougaarlegacy : /cvsroot/cougaarlegacy,
 	cougaar-pmd : /cvsroot/cougaar-pmd,
 	cougaarunit : /cvsroot/cougaarunit,
-            ccm  :  /cvsroot/ccm,
+  ccm  :  /cvsroot/ccm,
+  community  :  /cvsroot/community,
+            acme  :  /cvsroot/acme,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
