Prepping for wiki setup

--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -340,7 +340,15 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /usr/local/var/httpd/log/acme-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName cws.cougaar.org
+ DocumentRoot /var/www/gforge-projects/cws
+ CustomLog /usr/local/var/httpd/log/cws-access_log common
+ ErrorLog /usr/local/var/httpd/log/cws-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
 
 
 
