--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -83,6 +83,7 @@ cvs_roots =
   ccm  :  /cvsroot/ccm,
   community  :  /cvsroot/community,
             acme  :  /cvsroot/acme,
+            cws  :  /cvsroot/cws,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
