--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -36,9 +36,9 @@ DocumentRoot "/var/www/gforge-3.0/www"
 
 MaxClients 50
 
-Alias /wiki/ "/usr/share/moin/htdocs/" 
-Alias /cougaarwiki/img/ "/usr/share/moin/htdocs/img/" 
-ScriptAlias /cougaarwiki "/usr/share/moin/cougaarwiki/moin.cgi"
+#Alias /wiki/ "/usr/share/moin/htdocs/" 
+#Alias /cougaarwiki/img/ "/usr/share/moin/htdocs/img/" 
+#ScriptAlias /cougaarwiki "/usr/share/moin/cougaarwiki/moin.cgi"
 
 ScriptAlias /mailman/ "/usr/local/mailman/cgi-bin/"
 <Directory "/usr/local/mailman/cgi-bin/">
@@ -92,7 +92,7 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
 	SetEnv sys_gfdbpasswd fidd1e
 	Redirect /license.html http://cougaar.org/docman/view.php/17/58/license.html
 	Redirect /faq.html http://cougaar.org/docman/view.php/17/55/FAQ.html
-	Redirect /wiki/ http://cougaar.org/cougaarwiki/
+	#Redirect /wiki/ http://cougaar.org/cougaarwiki/
 </VirtualHost>
 
 <VirtualHost *>
@@ -130,6 +130,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/tutorials
  CustomLog /usr/local/var/httpd/log/tutorials-access_log common
  ErrorLog /usr/local/var/httpd/log/tutorials-error_log
+ <Directory "/var/www/gforge-projects/tutorials/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -137,6 +144,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/micro
  CustomLog /usr/local/var/httpd/log/micro-access_log common
  ErrorLog /usr/local/var/httpd/log/micro-error_log
+ <Directory "/var/www/gforge-projects/micro/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -144,6 +158,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cougaarunit
  CustomLog /usr/local/var/httpd/log/cougaarunit-access_log common
  ErrorLog /usr/local/var/httpd/log/cougaarunit-error_log
+ <Directory "/var/www/gforge-projects/cougaarunit/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -151,6 +172,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cui
  CustomLog /usr/local/var/httpd/log/cui-access_log common
  ErrorLog /usr/local/var/httpd/log/cui-error_log
+ <Directory "/var/www/gforge-projects/cui/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -160,6 +188,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /usr/local/var/httpd/log/support-error_log
  Options Indexes
  IndexOptions FancyIndexing
+ <Directory "/var/www/gforge-projects/support/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -167,6 +202,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/csmart
  CustomLog /usr/local/var/httpd/log/csmart-access_log common
  ErrorLog /usr/local/var/httpd/log/csmart-error_log
+ <Directory "/var/www/gforge-projects/csmart/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -174,6 +216,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cougaarlegacy
  CustomLog /usr/local/var/httpd/log/cougaarlegacy-access_log common
  ErrorLog /usr/local/var/httpd/log/cougaarlegacy-error_log
+ <Directory "/var/www/gforge-projects/cougaarlegacy/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -191,6 +240,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/bol2
  CustomLog /usr/local/var/httpd/log/bol2-access_log common
  ErrorLog /usr/local/var/httpd/log/bol2-error_log
+ <Directory "/var/www/gforge-projects/bol2/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -198,6 +254,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cougaaride
  CustomLog /usr/local/var/httpd/log/cougaaride-access_log common
  ErrorLog /usr/local/var/httpd/log/cougaaride-error_log
+ <Directory "/var/www/gforge-projects/cougaaride/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -205,6 +268,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/vishnu
  CustomLog /usr/local/var/httpd/log/vishnu-access_log common
  ErrorLog /usr/local/var/httpd/log/vishnu-error_log
+ <Directory "/var/www/gforge-projects/vishnu/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -212,6 +282,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/glm
  CustomLog /usr/local/var/httpd/log/glm-access_log common
  ErrorLog /usr/local/var/httpd/log/glm-error_log
+ <Directory "/var/www/gforge-projects/glm/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -219,6 +296,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/qos
  CustomLog /usr/local/var/httpd/log/qos-access_log common
  ErrorLog /usr/local/var/httpd/log/qos-error_log
+ <Directory "/var/www/gforge-projects/qos/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -226,6 +310,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/core
  CustomLog /usr/local/var/httpd/log/core-access_log common
  ErrorLog /usr/local/var/httpd/log/core-error_log
+ <Directory "/var/www/gforge-projects/core/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -233,6 +324,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/webserver
  CustomLog /usr/local/var/httpd/log/webserver-access_log common
  ErrorLog /usr/local/var/httpd/log/webserver-error_log
+ <Directory "/var/www/gforge-projects/webserver/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -240,6 +338,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/aggagent
  CustomLog /usr/local/var/httpd/log/aggagent-access_log common
  ErrorLog /usr/local/var/httpd/log/aggagent-error_log
+ <Directory "/var/www/gforge-projects/aggagent/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -247,6 +352,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/build
  CustomLog /usr/local/var/httpd/log/build-access_log common
  ErrorLog /usr/local/var/httpd/log/build-error_log
+ <Directory "/var/www/gforge-projects/build/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -254,6 +366,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/community
  CustomLog /usr/local/var/httpd/log/community-access_log common
  ErrorLog /usr/local/var/httpd/log/community-error_log
+ <Directory "/var/www/gforge-projects/community/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -261,6 +380,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/planning
  CustomLog /usr/local/var/httpd/log/planning-access_log common
  ErrorLog /usr/local/var/httpd/log/planning-error_log
+ <Directory "/var/www/gforge-projects/planning/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -268,6 +394,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/util
  CustomLog /usr/local/var/httpd/log/util-access_log common
  ErrorLog /usr/local/var/httpd/log/util-error_log
+ <Directory "/var/www/gforge-projects/util/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -275,6 +408,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cf-ruby-cvs-exp
  CustomLog /usr/local/var/httpd/log/cf-ruby-cvs-exp-access_log common
  ErrorLog /usr/local/var/httpd/log/cf-ruby-cvs-exp-error_log
+ <Directory "/var/www/gforge-projects/cf-ruby-cvs-exp/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -282,6 +422,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/servicediscovery
  CustomLog /usr/local/var/httpd/log/servicediscovery-access_log common
  ErrorLog /usr/local/var/httpd/log/servicediscovery-error_log
+ <Directory "/var/www/gforge-projects/servicediscovery/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -289,6 +436,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/yp
  CustomLog /usr/local/var/httpd/log/yp-access_log common
  ErrorLog /usr/local/var/httpd/log/yp-error_log
+ <Directory "/var/www/gforge-projects/yp/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -296,6 +450,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/delta-blackjack
  CustomLog /usr/local/var/httpd/log/delta-blackjack-access_log common
  ErrorLog /usr/local/var/httpd/log/delta-blackjack-error_log
+ <Directory "/var/www/gforge-projects/delta-blackjack/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -303,6 +464,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cougaar-pmd
  CustomLog /usr/local/var/httpd/log/cougaar-pmd-access_log common
  ErrorLog /usr/local/var/httpd/log/cougaar-pmd-error_log
+ <Directory "/var/www/gforge-projects/cougaar-pmd/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -310,6 +478,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/profiler
  CustomLog /usr/local/var/httpd/log/profiler-access_log common
  ErrorLog /usr/local/var/httpd/log/profiler-error_log
+ <Directory "/var/www/gforge-projects/profiler/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -317,6 +492,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/mts
  CustomLog /usr/local/var/httpd/log/mts-access_log common
  ErrorLog /usr/local/var/httpd/log/mts-error_log
+ <Directory "/var/www/gforge-projects/mts/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -324,6 +506,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/message-router
  CustomLog /usr/local/var/httpd/log/message-router-access_log common
  ErrorLog /usr/local/var/httpd/log/message-router-error_log
+ <Directory "/var/www/gforge-projects/message-router/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -331,6 +520,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/ccm
  CustomLog /usr/local/var/httpd/log/ccm-access_log common
  ErrorLog /usr/local/var/httpd/log/ccm-error_log
+ <Directory "/var/www/gforge-projects/ccm/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -338,6 +534,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/acme
  CustomLog /usr/local/var/httpd/log/acme-access_log common
  ErrorLog /usr/local/var/httpd/log/acme-error_log
+ <Directory "/var/www/gforge-projects/acme/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 <VirtualHost *>
@@ -345,6 +548,13 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  DocumentRoot /var/www/gforge-projects/cws
  CustomLog /usr/local/var/httpd/log/cws-access_log common
  ErrorLog /usr/local/var/httpd/log/cws-error_log
+ <Directory "/var/www/gforge-projects/cws/wiki/">
+  AddHandler cgi-script .pl
+  Options ExecCGI
+  AllowOverride All
+  Order allow,deny
+  Allow from all
+ </Directory>
 </VirtualHost>
 
 #PLACEHOLDER#
