--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -557,7 +557,15 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  </Directory>
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName awb.cougaar.org
+ DocumentRoot /var/www/gforge-projects/awb
+ CustomLog /usr/local/var/httpd/log/awb-access_log common
+ ErrorLog /usr/local/var/httpd/log/awb-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
 
 
 
