--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -84,6 +84,7 @@ cvs_roots =
   community  :  /cvsroot/community,
             acme  :  /cvsroot/acme,
             cws  :  /cvsroot/cws,
+            awb  :  /cvsroot/awb,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
