--- a/support/httpd.conf
+++ b/support/httpd.conf
@@ -564,7 +564,15 @@ ScriptAlias /cgi-bin/ "/usr/local/viewcvs/cgi/"
  ErrorLog /usr/local/var/httpd/log/awb-error_log
 </VirtualHost>
 
+<VirtualHost *>
+ ServerName fwsupport.cougaar.org
+ DocumentRoot /var/www/gforge-projects/fwsupport
+ CustomLog /usr/local/var/httpd/log/fwsupport-access_log common
+ ErrorLog /usr/local/var/httpd/log/fwsupport-error_log
+</VirtualHost>
+
 #PLACEHOLDER#
+
 
 
 
