--- a/support/viewcvs.conf
+++ b/support/viewcvs.conf
@@ -85,6 +85,7 @@ cvs_roots =
             acme  :  /cvsroot/acme,
             cws  :  /cvsroot/cws,
             awb  :  /cvsroot/awb,
+            fwsupport  :  /cvsroot/fwsupport,
 	csmart : /cvsroot/csmart,
 	cui : /cvsroot/cui,
 	delta-blackjack : /cvsroot/delta-blackjack,
